CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ROUTING)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_C_FLAGS "-g -Wall -Wextra")

SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")

INCLUDE_DIRECTORIES(src test)

FIND_PACKAGE(Threads REQUIRED)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)
AUX_SOURCE_DIRECTORY(test DIR_SRCS)

ADD_EXECUTABLE(togo ${DIR_SRCS})

TARGET_LINK_LIBRARIES (togo ${CMAKE_THREAD_LIBS_INIT})

